Add script to package for all platforms
Uses generic ant targets to create all platform-specific distribution
files (Windows, macOS, Linux).

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ build/
 dist/
 *~
 EvolutionIsTheKey.zip
+EvolutionIsTheKey-Win.zip
+EvolutionIsTheKey-Mac.zip
+EvolutionIsTheKey-Lnx.zip
 hs_err_pid*.log
 ld24.jar
 .DS_Store
